# musicbotultimate

./: README.md  index.html
MusicBot/: .env.example  Dockerfile  MusicBot.session  MusicBot.session-journal  bot.py  config.py  deploy_server.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  string_session_generator.py
MusicBot/helpers/: ai_recommendations.py  apple_music.py  assistant.py  cache.py  database.py  decorators.py  deezer.py  downloader.py  effects.py  filters.py  jiosaavn.py  lyrics.py  recognition.py  resso.py  scheduler.py  soundcloud.py  spotify.py  thumbnail.py  tidal.py  utils.py
MusicBot/plugins/: admin.py  ai.py  callbacks.py  download.py  effects_cmd.py  error_handler.py  favourites.py  group_management.py  identify.py  inline.py  lyrics.py  owner.py  play.py  queue.py  quiz.py  radio.py  scheduler_cmds.py  start.py  stats.py  video.py  voting.py  webapp.py  wrapped.py
MusicBot/strings/: buttons.py  emojis.py  messages.py
MusicBot/strings/locales/: ar.json  bn.json  en.json  es.json  hi.json  te.json
MusicBot/webapp/: index.html
supabase/migrations/: 20260505111859_create_musicbot_tables.sql
